syntax = "proto3";
package dev.array21.tactibetter;

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  string sessionid = 1;
  int64 expiresAt = 2;
}